# Munin-Vala-Plugins

./: .gitignore  .valencia  AUTHORS  CMakeLists.txt  CMake_Uninstall.cmake  CMake_Uninstall.cmake.in  Doxyfile.in  MAINTAINERS  Makefile  Makefile.am  README  README.md  README.source  autogen.sh  configure.ac  make.sh  make_clean.sh  make_deb.sh  make_launchpad.sh  make_pbuilder.sh  rules
cmake/: Doxyfile.in  useful_links.txt
cmake/distribution/deb/: CreateDEB.cmake
cmake/git/: MakeChangeLog.cmake  MakeChangeLogInternal.cmake  MakeChangeLogInternal.cmake.in
cmake/installer/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/installer/debian/: .goutputstream-ID8M7V  CreateDEB.cmake
cmake/installer/debian/tpls/: copyright_GPLv3.ex  emacsen-startup.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  munin-vala-plugins.default.ex  munin-vala-plugins.doc-base.ex  postinst.ex  project_name.cron.d.ex  project_name.logrotate.ex  rules_old.ex  watch.ex
cmake/toolchains/: CMakeLists.txt  tmp_CMakeLists.txt file
cmake/toolchains/maemo/: DpkgDeb.cmake  FindHildon.cmake  FindLibosso.cmake
debian/: README.Debian  README.source  changelog  control  copyright  rules
debian/tpls/: emacsen-install.ex  emacsen-remove.ex  munin-vala-plugins.init.ex  postrm.ex  preinst.ex  prerm.ex
resources/: munin-vala-plugins.1
src/: CMakeLists.txt  Makefile.am  main.vala  munin_plugins
src/.deps/: main.Po
src/plugins/: load.vala
